--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 
 <head>
-    <title>Create Course</title>
+    <title>Edit Course</title>
 </head>
 
 <body>
@@ -12,8 +12,8 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title mb-4">Thêm khóa học</h5>
-                    <form th:action="@{/course/create}" th:object="${course}" method="post">
+                    <h5 class="card-title mb-4">Chỉnh sửa khóa học</h5>
+                    <form th:action="@{/course/edit/{id}(id=${course.id})}" th:object="${course}" method="post">
                         <div class="mb-3">
                             <label for="lectureName" class="form-label">Tên khóa học</label>
                             <input class="form-control" type="text" th:field="*{lectureName}" id="lectureName" placeholder="Tên khóa học">
@@ -30,8 +30,8 @@
                             <div th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" class="text-danger"></div>
                         </div>
                         <div class="mb-3">
-                            <label for="place" class="form-label">Giá khóa học</label>
-                            <input class="form-control" type="text" th:field="*{place}" id="place" placeholder="Giá khóa học">
+                            <label for="place" class="form-label">Địa điểm</label>
+                            <input class="form-control" type="text" th:field="*{place}" id="place" placeholder="Địa điểm học">
                             <div th:if="${#fields.hasErrors('place')}" th:errors="*{place}" class="text-danger"></div>
                         </div>
                         <div class="mb-3">
@@ -39,7 +39,7 @@
                             <input class="form-control" type="text" th:field="*{address}" id="address" placeholder="Địa chỉ">
                             <div th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="text-danger"></div>
                         </div>
-                        <button type="submit" class="btn btn-success">Add</button>
+                        <button type="submit" class="btn btn-success">Cập nhật</button>
                     </form>
                 </div>
             </div>
